@@ -2,12 +2,14 @@ name = Discogs-API
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Discogs/API.pod6
+filename = doc/Discogs-API.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+#provider = github-actions/windows.yml
 
 [UploadToZef]
